# FaceGazeSynth

./: .gitignore  CLAUDE.md  Idea.md  PLAN.md  PlanProgress.md  README.md  pyproject.toml  requirements.txt  requrements.txt
facegazesynth/eye_model/: geometry.py  parameters.py  rotation.py
facegazesynth/face_model/: __init__.py  composition.py  expressions.py  flame_mesh.py
facegazesynth/materials/: albedo.py  cornea.py  iris.py  limbus.py  sclera.py  skin.py
facegazesynth/optics/: intersections.py  rays.py  refraction.py
facegazesynth/pipeline/: batch.py  face_render.py  redirect.py  single_eye.py  stereo_pair.py  sweep.py
facegazesynth/redirection/: __init__.py  compositing.py  detection.py  inpainting.py  physics_mapping.py  specular.py  warping.py
facegazesynth/rendering/: camera.py  composite_renderer.py  lighting.py  renderer.py  shading.py
facegazesynth/validation/: compare.py  diagnostics.py  expected_curves.py  face_validation.py  iris_displacement.py  redirect_validation.py
scripts/: generate_batch.py  redirect_gaze.py  render_face.py  render_face_sweep.py  render_single.py  render_sweep.py  validate.py
tests/: test_composite_renderer.py  test_face_model.py  test_geometry.py  test_intersections.py  test_phase3.py  test_redirection.py  test_refraction.py  test_rotation.py
